Bug 255900 - Regression(255052@main) Some streaming sites fail with an Embedded Video Sandbox Browser Error
Summary: Regression(255052@main) Some streaming sites fail with an Embedded Video Sand...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-24 18:48 PDT by Chris Dumez
Modified: 2023-04-25 09:58 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-04-24 18:48:16 PDT
Some streaming sites fail with an Embedded Video Sandbox Browser Error since 255052@main.
255052@main seems correct per the specification but exposing the "Chrome PDF Viewer" caused those sites to use a different code path for validating iframe sandboxing.
They now try to load a data URL with a pdf MIME type inside an <object> element and this fails on iOS.
Comment 1 Chris Dumez 2023-04-24 18:48:30 PDT
<rdar://107795151>
Comment 2 Chris Dumez 2023-04-24 19:31:45 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13128
Comment 3 EWS 2023-04-25 09:58:15 PDT
Committed 263377@main (2c5a97645ec0): <https://commits.webkit.org/263377@main>

Reviewed commits have been landed. Closing PR #13128 and removing active labels.