Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm
@@ -794,6 +794,9 @@ void PDFPlugin::receivedNonLinearizedPDFSentinel()
         return;
 
     m_pdfDocument = adoptNS([allocPDFDocumentInstance() initWithData:rawData()]);
+    if (!m_pdfDocument)
+        return;
+
     installPDFDocument();
     tryRunScriptsInPDFDocument();
 }
@@ -1640,7 +1643,8 @@ void PDFPlugin::streamDidFinishLoading()
 #endif
     {
         m_pdfDocument = adoptNS([allocPDFDocumentInstance() initWithData:rawData()]);
-        installPDFDocument();
+        if (m_pdfDocument)
+            installPDFDocument();
     }
 
     tryRunScriptsInPDFDocument();
